--- a/files/templates/files/renderlist.html
+++ b/files/templates/files/renderlist.html
@@ -1,11 +1,9 @@
 {% load static %}
 {% load widget_tweaks %}
 
-
 <!-- FILE LIST -->
 <div class="container">
-    <div class="row">
-
+    <div class="row center">
         {% for file in file_list %}
             <div id="card" class="card">
                 <div class="card-header"><a href="{% url 'file_detail' file.slug %}"><h5>{{ file }}</h5></a></div>
@@ -48,24 +46,47 @@
             </div>
         {% endfor %}
 
-        <div class="pagination card" id="card">
-                <span class="card-body step-links">
+        <div class="pagination center" style="color: black">
+            <div class="">
+
                     {% if file_list.has_previous %}
-                    <a id="prev" href="?page={{ file_list.previous_page_number }}">previous</a>
+                    <a id="prev" class="pagination-action centered" href="?page={{ file_list.previous_page_number }}">
+                        <i class="fa fa-angle-double-left" aria-hidden="true"></i>
+                    </a>
+                        <a id="prev" class="pagination-action centered" href="?page={{ file_list.previous_page_number }}">
+                            <i class="fa fa-angle-left" aria-hidden="true"></i>
+                    </a>
                     {% else %}
-                    <span style="visibility:hidden;">previous</span>
+                    <span style="visibility:hidden;">
+                        <i class="fa fa-angle-left" aria-hidden="true"></i>
+                    </span>
                     {% endif %}
 
-                    <span class="current">
-                    Page {{ file_list.number }} of {{ file_list.paginator.num_pages }}.
-                    </span>
+
+                    <span class="pagination-of centered">Σελίδα </span>
+                    <span class="pagination-current centered">{{ file_list.number }}</span>
+                    <span class="pagination-of"> από </span>
+                    <span class="pagination-total">{{ file_list.paginator.num_pages }}</span>
+
 
                     {% if file_list.has_next %}
-                                <a id="next" href="?page={{ file_list.number|add:1 }}">next</a>
+                        <a id="next" class="pagination-action" href="?page={{ file_list.number|add:1 }}">
+                            <i class="fa fa-angle-right" aria-hidden="true"></i>
+                        </a>
+                        <a id="next" class="pagination-action" href="?page={{ file_list.number|add:1 }}">
+                            <i class="fas fa-angle-double-right"></i>
+                        </a>
                     {% else %}
-                                <span style="visibility:hidden;">next</span>
+                        <span style="visibility:hidden;">
+                            <i class="fa fa-angle-double-right" aria-hidden="true"></i>
+                        </span>
                     {% endif %}
-                </span>
+
+            </div>
+
+
+
+
             </div>
 
     </div>
