--- a/files/templates/base.html
+++ b/files/templates/base.html
@@ -127,7 +127,7 @@
     <script src={% static "js/jquery.bootstrap.modal.forms.js" %}></script>
     <script defer src="{% static 'js/solid.js' %}"></script>
     <script defer src="{% static 'js/fontawesome.js' %}"></script>
-    <script defer src="{% static 'js/jquery.autoSuggest.minified.js' %}"></script>
+{#    <script defer src="{% static 'js/jquery.autoSuggest.minified.js' %}"></script>#}
     <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
 
     <script type="text/javascript">
