--- a/files/templates/files/s.html
+++ b/files/templates/files/s.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="searchbar">
     <h3>Αναζήτηση στο αποθετήριο</h3>
     <input class="m-3" type="text" placeholder="Search"/>
