--- a/files/static/scss/style.scss
+++ b/files/static/scss/style.scss
@@ -1,6 +1,3 @@
-
-
-
 a, a:hover {
   text-decoration: none;
 }
@@ -15,7 +12,6 @@ a, a:hover {
 }
 
 .wrapper {
-  width: 100%;
   width: 100%;
   height: auto;
   min-height: 50vh;
@@ -34,9 +30,9 @@ a, a:hover {
 .dh-valign-center-row .et_pb_column,
 .dh-valign-center-section,
 .dh-valign-center-module {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
 }
 
@@ -44,13 +40,13 @@ a, a:hover {
   width: 100%;
   min-height: 460px;
   margin: auto;
-  box-shadow: 0px 8px 60px -10px rgba(13,28,39,0.6);
+  box-shadow: 0 8px 60px -10px rgba(13,28,39,0.6);
   background: #fff;
   border-radius: 12px;
   max-width: 1000px;
   min-width: 500px;
   position: relative;
-  border: black solid;
+  border: red solid;
 
   &.active {
     .profile-card__cnt {
@@ -81,7 +77,7 @@ a, a:hover {
     overflow: hidden;
     position: relative;
     z-index: 4;
-    box-shadow: 0px 5px 50px 0px rgba(19, 127, 212, 0.4), 0px 0px 0px 7px #a9babb;
+    box-shadow: 0 5px 50px 0 rgba(19, 127, 212, 0.4), 0 0 0 7px #a9babb;
 
     @media screen and (max-width: 576px) {
       width: 120px;
@@ -103,7 +99,7 @@ a, a:hover {
     align-content: center;
     padding-left: 10px;
     padding-right: 10px;
-    border: black solid;
+    border: red solid;
     padding-bottom: 20px;
   }
 
@@ -143,13 +139,17 @@ a, a:hover {
     &__title {
       font-weight: 700;
       font-size: 22px;
-      //color: #6944ff;
+      //color: red;
       color: #007489;
+      align-self: flex-start;
+      border: red 2px;
     }
 
     &__txt {
       font-weight: 500;
       margin-top: 7px;
+      border: red 2px;
+
     }
 
     &__title2 {
@@ -230,20 +230,20 @@ a, a:hover {
 
     &.button--blue {
       background: linear-gradient(45deg, #007489, #0e71c8);
-      box-shadow: 0px 4px 30px rgba(19, 127, 212, 0.4);
+      box-shadow: 0 4px 30px rgba(19, 127, 212, 0.4);
 
       &:hover {
-        box-shadow: 0px 7px 30px rgba(19, 127, 212, 0.75);
+        box-shadow: 0 7px 30px rgba(19, 127, 212, 0.75);
       }
 
     }
 
     &.button--orange {
       background: linear-gradient(45deg, #d5135a, #f05924);
-      box-shadow: 0px 4px 30px rgba(223, 45, 70, 0.35);
+      box-shadow: 0 4px 30px rgba(223, 45, 70, 0.35);
 
       &:hover {
-        box-shadow: 0px 7px 30px rgba(223, 45, 70, 0.75);
+        box-shadow: 0 7px 30px rgba(223, 45, 70, 0.75);
       }
 
     }
