--- a/files/templates/files/file_list.html
+++ b/files/templates/files/file_list.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+
 {% load static %}
-{% load taggit_templatetags2_tags %}
-{% get_taglist as tags %}
+{#{% load taggit_templatetags2_tags %}#}
+{#{% get_taglist as tags %}#}
+
 
 {% block title %}Αποθετήριο{% endblock %}
 
@@ -17,6 +19,24 @@
 
             <!-- SIDEBAR -->
             <nav class="col-4 sidebar">
+                <!-- TAGS -->
+                <table class="table table-light">
+                        <thead>
+                            <tr>
+                                <th scope="col">
+                                    Ετικέτες
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    {% include 'files/tags.html' %}
+                                </td>
+                            </tr>
+                        </tbody>
+                </table>
+                <hr/>
 
                 <!-- AREAS -->
                 <table class="table table-light">
@@ -30,7 +50,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <input id="areatreesearch" type="text" placeholder="search">
+                                <label for="areatreesearch"></label><input id="areatreesearch" type="text" placeholder="search">
                                 <div id="Areatree" style="text-align: left"></div>
                             </td>
                         </tr>
@@ -48,7 +68,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <input id="cattreesearch" type="text" placeholder="search">
+                                <label for="cattreesearch"></label><input id="cattreesearch" type="text" placeholder="search">
                                 <div id="Cattree" style="text-align: left" ></div>
                             </td>
                         </tr>
@@ -60,15 +80,7 @@
             <!-- FILE LIST -->
             <div  class="col-8">
                 <div id="list"></div>
-
-
-
             </div>
-
-
-
-
-
         </div>
     </div>
 
